syntax = "proto3";
package hyperlane.core.interchain_security.v1;

option go_package = "github.com/bcp-innovations/hyperlane-cosmos/x/core/01_interchain_security/types";

import "gogoproto/gogo.proto";

import "cosmos_proto/cosmos.proto";

// EventCreateNoopIsm ...
message EventCreateNoopIsm {
  // ism_id ...
  string ism_id = 1 [
    (gogoproto.customtype) =
        "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];

  // owner ...
  string owner = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
}

// EventCreateMerkleRootMultisigIsm ...
message EventCreateMerkleRootMultisigIsm {
  string ism_id = 1 [
    (gogoproto.customtype) =
        "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];

  string owner = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  repeated string validators = 3;

  uint32 threshold = 4;
}

// EventCreateMessageIdMultisigIsm ...
message EventCreateMessageIdMultisigIsm {
  string ism_id = 1 [
    (gogoproto.customtype) =
        "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];

  string owner = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  repeated string validators = 3;

  uint32 threshold = 4;
}

// EventCreateMessageIdMultisigIsm ...
message EventAnnounceStorageLocation {
  string mailbox_id = 1 [
    (gogoproto.customtype) =
        "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];

  string sender = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  string validator = 3;

  string storage_location = 4;
}

// EventSetRoutingIsmDomain ...
message EventSetRoutingIsmDomain {
  string ism_id = 1 [
    (gogoproto.customtype) =
        "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];

  string owner = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  string route_ism_id = 3 [
    (gogoproto.customtype) =
        "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];

  uint32 route_domain = 4;
}

// EventRemoveRoutingIsmDomain ...
message EventRemoveRoutingIsmDomain {
  string ism_id = 1 [
    (gogoproto.customtype) =
        "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];

  string owner = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  uint32 route_domain = 3;
}

// EventRemoveRoutingIsmDomain ...
message EventSetRoutingIsm {
  string ism_id = 1 [
    (gogoproto.customtype) =
        "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];

  string owner = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  string new_owner = 3;
  bool renounce_ownership = 4;
}

// EventCreateMessageIdMultisigIsm ...
message EventCreateRoutingIsm {
  string ism_id = 1 [
    (gogoproto.customtype) =
        "github.com/bcp-innovations/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];
  string owner = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
}
